gap:fix

--- a/src/app/css/ClothesBox.css
+++ b/src/app/css/ClothesBox.css
@@ -6,8 +6,9 @@
 
 .card-content {
     padding: 4px;
-
-    padding: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
 }
 
 .card-container {
