--- a/src/app/css/Header.css
+++ b/src/app/css/Header.css
@@ -13,7 +13,6 @@
 
 .user-panel {
     display: flex;
-    gap: 20px;
     align-items: center;
 }
 
